fixed button color issue on mobile chrome iOS

--- a/src/Components/PortfolioItem.css
+++ b/src/Components/PortfolioItem.css
@@ -285,7 +285,7 @@
 
 .gh__button--link {
   border: hidden;
-  background: slate;
+  background: white;
   color: #6200ee;
   width: 10rem;
   height: 100px;
